# easy_deploy

./: .gitignore  Cargo.toml  README.md
src/: deploy.rs  main.rs
