[package]
name = "deploy"
version = "0.1.1"
edition = "2021"

[dependencies]
argh = "0.1.12"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.29.0"
schemars = "0.8.21"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
ssh2 = "0.9.4"
